--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -1,8 +1,18 @@
 @import '../../assets/scss/_build.scss';
 
 .projects {
-	@include flexbox;
-	flex-wrap: wrap;
+
+	&-cards {
+		@include flexbox;
+		flex-wrap: wrap;
+	}
+
+	&-title {
+		font-family: Lato Regular;
+		font-size: 2rem;
+		color: rgba($black, .4);
+		margin-bottom: 2rem;
+	}
 }
 
 button {
@@ -10,6 +20,8 @@ button {
 }
 
 .card {
+	position: relative;
+
 	@include flexbox;
 	justify-content: center;
 	flex-wrap: wrap;
@@ -43,10 +55,18 @@ button {
 	&-button {
 		&--create {
 			position: absolute;
-			top: 50%;
-			left: 50%;
-			right: 0;
-			transform: translate(-50%, -50%);
+			top: 0;
+
+			@include flexbox;
+			justify-content: center;
+			align-items: center;
+
+			width: 100%;
+			height: 100%;
+
+			&:hover .card-plus {
+				color: $light-blue;
+			}
 		}
 	}
 
@@ -230,20 +250,11 @@ button {
 
 		position: relative;
 
-		border-bottom: 1px solid rgba($black, .15);
 
-		&::before {
-			display: block;
-			content: "";
-			width: 100%;
-			height: 3px;
-			border-top-left-radius: 4px;
-			border-top-right-radius: 4px;
-			background-image: $login-bg;
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
+		border-top: 3px solid $light-blue;
+		border-bottom: 1px solid rgba($black, .15);
+		border-top-left-radius: 2px;
+		border-top-right-radius: 2px;
 	}
 
 	&-date {
@@ -344,7 +355,12 @@ button {
 			}
 
 			.card-footer {
-				padding: 0;
+				position: absolute;
+				bottom: 10px;
+
+				width: 100%;
+				left: 0;
+				padding: 0 15px;
 			}
 		}
 	}
